hydroflow/tests/compile-fail/surface_loop_missing_windowing.stderr
warning: `loop` blocks are not yet supported.
 --> tests/compile-fail/surface_loop_missing_windowing.rs:4:9
  |
4 |         loop {
  |         ^^^^

error: Operator `null(...)` entering a loop context must be a windowing operator, but is not.
 --> tests/compile-fail/surface_loop_missing_windowing.rs:5:18
  |
5 |             a -> null();
  |                  ^^^^^^
